@@ -45,7 +45,5 @@ val to_packed_file:
            Result:
              relocation information (reversed) *)
 
-val reset: unit -> unit
-
 val marshal_to_channel_with_possibly_32bit_compat :
   filename:string -> kind:string -> out_channel -> 'a -> unit
